[package]
name = "gruntlauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["image", "selector", "debug", "advanced", "lazy", "tokio", "wgpu"] }
iced_webview_v2 = { git = "https://github.com/franzos/iced_webview_v2", default-features = false, features = ["blitz", "litehtml"] }  # or "cef"
image = "0.25.6"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["v4"] }
