[package]
name = "gruntlauncher"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/renarin-kholin/gruntlauncher"

[workspace]
members = [".", "crates/iced_blitzview"]

[profile.dev]
strip = "debuginfo"
[profile.dev.package."*"]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
bytes = "1.12.0"
directories = "6.0.0"
email_address = "0.2.9"
futures = "0.3.32"
iced = { version = "0.14.0", features = ["image", "selector", "debug", "advanced", "lazy", "tokio", "wgpu", "sipper"] }
iced_aw = { version = "0.14.0", features = ["full"] }
# iced_webview_v2 = { git = "https://github.com/franzos/iced_webview_v2", default-features = false, features = ["blitz", "litehtml"] }  # or "cef"
iced_blitzview = { path = "crates/iced_blitzview"}
image = "0.25.6"
lru = "0.18.0"
reqwest = { version = "0.13.4", features = ["json", "stream", "query"] }
semver = "1.0.28"
serde = "1.0.228"
serde_json = "1.0.150"
sipper = "0.1.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "process"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
webbrowser = "1.2.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
